syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";

package storage;

message ComplianceConfig {
    string id   = 1 [(gogoproto.moretags) = 'sql:"pk"'];
    bool hideScanResults = 2;
}


